tests/ui/never_type/diverging-tuple-parts-39485.stderr
error[E0308]: mismatched types
  --> $DIR/diverging-tuple-parts-39485.rs:8:5
   |
LL |     &panic!()
   |     ^^^^^^^^^ expected `()`, found `&_`
   |
   = note: expected unit type `()`
              found reference `&_`
help: a return type might be missing here
   |
LL | fn g() -> _ {
   |        ++++
help: consider removing the borrow
   |
LL -     &panic!()
LL +     panic!()
   |

error[E0308]: mismatched types
  --> $DIR/diverging-tuple-parts-39485.rs:12:5
   |
LL | fn f() -> isize {
   |           ----- expected `isize` because of return type
LL |     (return 1, return 2)
   |     ^^^^^^^^^^^^^^^^^^^^ expected `isize`, found `(!, !)`
   |
   = note: expected type `isize`
             found tuple `(!, !)`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
